--- a/public/lang/resumeData-es.json
+++ b/public/lang/resumeData-es.json
@@ -1,16 +1,16 @@
 {
   "main": {
-    "name":"ESPAÑOL",
-    "description":"Hi, I am a developer and I use my skills to develop what I am imagining. This is my resume web page, let's see what I can do, let's start",
+    "name":"Jose Luis Moreno-Cid Cabezas",
+    "description":"Hola, soy un desarrollador, utilizo mis conocimientos para crear lo que imagino. Esta es mi página web de currículum, veamos qué puedo hacer, comencemos",
     "image":"jmc-640.jpg",
-    "bio":"I am a computer enthusiast, with an entrepreneurial spirit, a knack for online security, and a passion for coding. Born in Leganés and living in Fuenlabrada (Madrid), I started with a windows95 computer at my 6 years old, touching everything to see how it's works, then playing and coding in games like Minecraft at my 12th where my career starts for me. I love to create and tend to keep a few too many projects on the go at a time. Outside of work I like to train at gym and eat well. I love to travel to new places and discover another cultures.",
-    "contactmessage":"Feel free to contact me, I will answer you delighted.",
+    "bio":"Soy un entusiasta de los ordenadores, con un espíritu emprendedor, un don para la seguridad en línea y una pasión por la codificación. Nacido en Leganés y viviendo en Fuenlabrada (Madrid), comencé con un ordenador windows95 a los 6 años, tocando todo para ver cómo funcionaba, luego jugando y desarrollando en juegos como Minecraft a los 12 años, donde empieza mi carrera. Me encanta crear y suelo mantener demasiados proyectos en marcha a la vez. Fuera del trabajo me gusta entrenar en el gimnasio y comer sano. Me encanta viajar a nuevos lugares y descubrir otras culturas.",
+    "contactmessage":"No dudes en contactarme, te responderé encantado.",
     "nav": {
       "home": "Home",
-      "about": "About",
-      "resume": "Resume",
-      "works": "Works",
-      "contact": "Contact"
+      "about": "Acerca de mi",
+      "resume": "CV (Resume)",
+      "works": "Proyectos",
+      "contact": "Contacto"
     },
     "email": "jl.morenocid@gmail.com",
     "phone": "685154911",
@@ -19,7 +19,7 @@
     "address":{
       "street":"",
       "city":"Fuenlabrada (Madrid)",
-      "state":"Spain",
+      "state":"España",
       "zip": "28943"
     },
     "website": "https://blueclouds.es",
@@ -38,33 +38,33 @@
     ]
   },
   "resume":{
-    "skillmessage":"Everyday I update myself, I keep learning and I have had touch almost everything, but I'm still in process of being senior dev.",
+    "skillmessage":"Todos los días me actualizo, sigo aprendiendo y por ello he tenido contacto con casi todo, pero todavía estoy en proceso de ser un buen desarrollador senior.",
     "education":[
       {
         "school":"IES Gaspar Melchor de Jovellanos",
-        "degree":"Medium degree in Administrative Management",
-        "graduated":"June 2018",
-        "description":"A different experience but not my main branch."
+        "degree":"Grado Medio en Gestión Administrativa",
+        "graduated":"Junio 2018",
+        "description":"Una experiencia diferente, pero no es mi rama principal."
       },
       {
         "school":"Colegio Los Naranjos",
-        "degree":"Superior Degree of Multiplatform Applications Development",
-        "graduated":"June 2020",
-        "description":"It has been a personal challenge in which I have learned real experiences with which I have ended up with several honorable mentions."
+        "degree":"Grado Superior en Desarrollo de Aplicaciones Multiplataforma (DAM)",
+        "graduated":"Junio 2020",
+        "description":"Ha sido un reto personal en el que he aprendido experiencias reales con las que he acabado en varias menciones honoríficas."
       }
     ],
     "work":[
       {
         "company":"Repuestos Reyes",
-        "title":"WooCommerce development and IT maintenance",
-        "years":"May 2017 - July 2017",
-        "description":"My first job! It was a short experience because it was an internship as a scholar, I saw a bit of WooCommerce and WordPress, something basic but strong today."
+        "title":"Desarrollo de WooCommerce, WordPress y mantenimiento de EPI",
+        "years":"Mayo 2017 - Julio 2017",
+        "description":"¡Mi primer trabajo! Fue una experiencia corta ya que fueron las prácticas del GM, vi un poco de WooCommerce y WordPress, algo básico pero fuerte hoy."
       },
       {
         "company":"Conapa",
         "title":"Junior FullStack developer",
-        "years":"July 2017 - August 2020",
-        "description":"Small company with big aspirations, good fellows to cowork with, I learned a lot of things and waked up my coding fever, here I had the push to start my professional career."
+        "years":"Julio 2017 - Agosto 2020",
+        "description":"Pequeña empresa con grandes aspiraciones, buenos compañeros para trabajar, aprendí muchas cosas y desperté mi fiebre por el desarrollo, aquí tuve el empujón para comenzar mi carrera profesional."
       }
     ],
     "skills":[
@@ -118,7 +118,7 @@
     "projects": [
       {
         "title":"Mi blog personal (En construcción)",
-        "category":"My Personal Blog to share my ideas",
+        "category":"Mi Blog Personal para compartir mis ideas",
         "image":"07.jpg",
         "url":"#"
       }
