--- a/public/lang/resumeData-en.json
+++ b/public/lang/resumeData-en.json
@@ -23,7 +23,7 @@
       "zip": "28943"
     },
     "website": "https://blueclouds.es",
-    "resumedownload":"cv/CV+-+JOSE+LUIS+MORENO-CID+CABEZAS.pdf",
+    "resumedownload":"cv/CV - JOSE LUIS MORENO-CID CABEZAS.pdf",
     "social":[
       {
         "name":"linkedin",
