--- a/public/lang/resumeData-en.json
+++ b/public/lang/resumeData-en.json
@@ -13,7 +13,7 @@
       "contact": "Contact"
     },
     "email": "jl.morenocid@gmail.com",
-    "phone": "685154911",
+    "phone": "+34 685 15 49 11",
     "github":"https://github.com/JL-MORENOCID",
     "linkedin":"https://www.linkedin.com/in/jl-morenocid/",
     "address":{
